--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "wine app backend",
   "main": "index.ts",
   "engines": {
-    "node": "16.13.1"
+    "node": "16.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
